# leptos-qr-scanner

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/CSR/: Cargo.toml  README.md
examples/CSR/src/: main.rs
examples/SSR/: Cargo.toml  README.md
examples/SSR/src/: app.rs  error_template.rs  lib.rs  main.rs
examples/scanner/: Cargo.toml
examples/scanner/src/: main.rs
public/: qr-scanner-wrapper.min.js
src/: lib.rs  main.rs
