[package]
name = "leptos-qr-scanner"
version = "0.1.0"
edition = "2021"
description = "Hacky, JS-based QR scanner for Leptos"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.5", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3.64", features = ["HtmlVideoElement"] }
js-sys = "0.3.64"
