[package]
name = "leptos-qr-scanner"
version = "0.3.0"
edition = "2021"
description = "Hacky, JS-based QR scanner for Leptos"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlVideoElement"] }
js-sys = "0.3"
