[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
console_log = { version = "1", features = ["color"] }
leptos = "0.4.8"
leptos_meta = { version = "0.4.6", features = ["csr"] }
leptos-qr-scanner = { path = "../.." }
